--- a/_pages/people.html
+++ b/_pages/people.html
@@ -47,14 +47,14 @@ author_profile: true
 
     <table>
         <tr>
-            <td class ="name-column"><strong>John Doe</strong></td>
-            <td class ="image-column"><img src="/images/clean_room.jpg" alt="Example."></td>
+            <td class ="name-column"><strong>Prof. Kerri Cahoy</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/Cahoy02.jpg" alt="Prof. Kerri Cahoy"></td>
             <td></td>
 
         </tr>
         <tr>
             <td class ="name-column"><strong>Jane Smith</strong></td>
-            <td class ="image-column"><img src="https://via.placeholder.com/100" alt="Jane Smith"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/small_paulserra.png" alt="Paul Serra"></td>
             <td></td>
         </tr>
         <tr>
