Almost all current (2024)  members added

--- a/_pages/people.html
+++ b/_pages/people.html
@@ -63,47 +63,47 @@ author_profile: true
         </tr>
         <tr>
             <td class ="name-column"><strong>Dr. Ajay Gill</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/ajay.jpg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/ajay.jpg" alt="Ajay Gill"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Thomas Murphy</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/astronaut-clipart-cute-9.jpg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/astronaut-clipart-cute-9.jpg" alt="Thomas Murphy"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Nicholas Belsten</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/Nick_Belsten.jpg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/Nick_Belsten.jpg" alt="Nicholas Belsten"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Patrick McKeen</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/Patrick_small.jpeg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/Patrick_small.jpeg" alt="Patrick McKeen"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Shreeyam Kacker</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/ShreeyamKacker.JPG" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/ShreeyamKacker.JPG" alt="Shreeyam Kacker"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Hannah Tomio</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/HannahTomio.JPG" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/HannahTomio.JPG" alt="Hannah Tomio"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Sophia Vlahakis</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/SophiaVlahakis.jpg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/SophiaVlahakis.jpg" alt="Sophia Vlahakis"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Mary Dahl</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/MaryDahl.jpg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/MaryDahl.jpg" alt="Mary Dahl"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Samantha Hasler</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/SamanthaHasler.jpg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/SamanthaHasler.jpg" alt="Samantha Hasler"></td>
             <td></td>
         </tr>
         <tr>
@@ -113,32 +113,97 @@ author_profile: true
         </tr>
         <tr>
             <td class ="name-column"><strong>Maddie Garcia</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/maddieg.png" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/maddieg.png" alt="Maddie Garcia"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Mason Black</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/mason.png" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/mason.png" alt="Mason Black"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Humberto Caldelas</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/astronaut-clipart-cute-9.jpg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/astronaut-clipart-cute-9.jpg" alt="Humberto Caldelas"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Christine Page</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/christine_page.jpg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/christine_page.jpg" alt="Christine Page"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Katherine Chun</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/KCHUN.jpg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/KCHUN.jpg" alt="Katherine Chun"></td>
             <td></td>
         </tr>
         <tr>
             <td class ="name-column"><strong>Leonardo Gallo</strong></td>
-            <td class ="image-column"><img src="{{ base_path }}/images/headshots/leo.jpeg" alt="Paul Serra"></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/leo.jpeg" alt="Leonardo Gallo"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Kristen Ammons</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/kristen.JPG" alt="Kristen Ammons"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Mohamed Mohamed</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/astronaut-clipart-cute-9.jpg" alt="Mo_carrat_2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Dansil Green</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/astronaut-clipart-cute-9.jpg" alt="Dansil Green"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>James Dingley</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/Dingley_headshot.png" alt="James Dingley"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Madeline Loui Anderson</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/madi.jpg" alt="Madeline Loui Anderson"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Brandon Eickert</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/brandon.jpg" alt="Brandon Eickert"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Emma Shafer</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/emma_shafer.JPEG" alt="Emma Shafer"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Paige Forester</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/paige.png" alt="Paige Forester"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Adam Bahlous-Boldi</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/adam_0.jpg" alt="Adam Bahlous-Boldi"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Sai Manojkumar</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/astronaut-clipart-cute-9.jpg" alt="Sai Manojkumar"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Carissma McGee</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/headshot_mcgee.jpeg" alt="Carissma McGee"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Neel Mondal</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/neel.jpeg" alt="Neel Mondal"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column"><strong>Leila Freitag</strong></td>
+            <td class ="image-column"><img src="{{ base_path }}/images/headshots/leila.jpg" alt="Leila Freitag"></td>
             <td></td>
         </tr>
     </table>
