--- a/_pages/people.html
+++ b/_pages/people.html
@@ -20,13 +20,21 @@ author_profile: true
         }
         td {
             border: none;
-            padding: 15px 8px;
             text-align: center; /* Horizontally center content in all cells */
             vertical-align: middle; /* Vertically centers the content */
         }
         .name-column {
             /* text-align: center-right; */
             /* position: relative; */
+            padding: 15px 8px;
+            padding-left: 20%;
+            /* text-align: center; */
+            font-weight: bold;
+            width: 20%; /* Adjust width as needed */
+            white-space: nowrap; /* Prevents text from wrapping to the next line */
+        }
+        .name-column2 {
+            text-align: left;
             padding-left: 20%;
             /* text-align: center; */
             font-weight: bold;
@@ -34,6 +42,7 @@ author_profile: true
             white-space: nowrap; /* Prevents text from wrapping to the next line */
         }
         .image-column img {
+            padding: 12px 8px;
             display: inline-block;
             text-align: center;
             /* margin: 0 auto; */
@@ -207,6 +216,162 @@ author_profile: true
             <td></td>
         </tr>
     </table>
+
+    <br></br>
+
+    <h3>STAR Lab Alumni</h3>
+
+    <table>
+        <tr>
+            <td class ="name-column2"><strong>Postdoc, Dr. Ewan Douglas</strong></td>
+            <td class ="name-column2">2016-2019, Faculty U. Arizona</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Postdoc, Dr. Leonid Pogorelyuk</strong></td>
+            <td class ="name-column2">2020-2023, Faculty RPI</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Whitney Lohmeyer</strong></td>
+            <td class ="name-column2">Ph.D. 2015, S.M. 2013</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Ryan Kingsbury</strong></td>
+            <td class ="name-column2">Ph.D. 2015</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Anne Marinan</strong></td>
+            <td class ="name-column2">Ph.D. 2016, S.M. 2013</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Michael Pasqual</strong></td>
+            <td class ="name-column2">Ph.D. 2016</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Matthew Webber</strong></td>
+            <td class ="name-column2">Ph.D. 2017</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Hyosang Yoon</strong></td>
+            <td class ="name-column2">Ph.D. 2017</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Tam Nguyen</strong></td>
+            <td class ="name-column2">Ph.D. 2018, S.M. 2015</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Ashley Carlton</strong></td>
+            <td class ="name-column2">Ph.D. 2018, S.M. 2016</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Emily Clements</strong></td>
+            <td class ="name-column2">Ph.D. 2018, S.M. 2013</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Andrew Kennedy</strong></td>
+            <td class ="name-column2">Ph.D. 2018, S.M. 2015</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong>Dr. Kathleen Riesing</strong></td>
+            <td class ="name-column2">Ph.D. 2018, S.M. 2015</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td class ="name-column2"><strong></strong></td>
+            <td class ="name-column2"></td>
+            <td></td>
+        </tr>
 
 </body>
 
