More alum added to the People page

--- a/_pages/people.html
+++ b/_pages/people.html
@@ -288,85 +288,88 @@ author_profile: true
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Angela Crews</strong></td>
+            <td class ="name-column2">Ph.D. 2019</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Roman Geykhman</strong></td>
+            <td class ="name-column2">Ph.D. 2019</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Raichelle Aniceto</strong></td>
+            <td class ="name-column2">Ph.D. 2019, S.M. 2017</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Pratik Dave</strong></td>
+            <td class ="name-column2">Ph.D. 2020, S.M. 2014</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. James Clark</strong></td>
+            <td class ="name-column2">Ph.D. 2020, S.M. 2016</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Riley Fitzgerald</strong></td>
+            <td class ="name-column2">Ph.D. 2021, S.M. 2018</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Alexa Aguilar</strong></td>
+            <td class ="name-column2">Ph.D. 2022, S.M. 2019</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Ezinne Uzo-Okoro</strong></td>
+            <td class ="name-column2">Ph.D. 2022</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Paula do Vale Pereira</strong></td>
+            <td class ="name-column2">Ph.D. 2022, S.M. 2019</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Gregory Allan</strong></td>
+            <td class ="name-column2">Ph.D. 2022, S.M. 2018</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Christian Haughwout</strong></td>
+            <td class ="name-column2">Ph.D. 2022, S.M. 2018</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Ondrej Čierny</strong></td>
+            <td class ="name-column2">Ph.D. 2023</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Manwei Chan</strong></td>
+            <td class ="name-column2">Ph.D. 2023</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Rachel Morgan</strong></td>
+            <td class ="name-column2">Ph.D. 2023, S.M. 2020</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Peter Grenfell</strong></td>
+            <td class ="name-column2">Ph.D. 2024, S.M. 2020</td>
             <td></td>
         </tr>
         <tr>
-            <td class ="name-column2"><strong></strong></td>
-            <td class ="name-column2"></td>
+            <td class ="name-column2"><strong>Dr. Cadence Payne</strong></td>
+            <td class ="name-column2">Ph.D. 2024, S.M. 2020</td>
             <td></td>
         </tr>
+
+        <br></br>
+
         <tr>
             <td class ="name-column2"><strong></strong></td>
             <td class ="name-column2"></td>
@@ -376,7 +379,7 @@ author_profile: true
 </body>
 
 
-
+<!-- {% include footer.html %} -->
 
 
 <!-- 
